--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,8 @@
-core var/lib/kaholo/kaholo-agent
-package.json var/lib/kaholo/kaholo-agent
+api var/lib/kaholo/kaholo-agent
 config var/lib/kaholo/kaholo-agent
+utils var/lib/kaholo/kaholo-agent
+workers var/lib/kaholo/kaholo-agent
+package.json var/lib/kaholo/kaholo-agent
+app.js var/lib/kaholo/kaholo-agent
 debian/kaholo-agent.service /lib/systemd/system
+kaholo-agent.conf.example /etc/kaholo-agent/kaholo-agent.conf
